--- a/workspaces/package1/package.json
+++ b/workspaces/package1/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "go": "while true; do echo \"App1: \" $(date); sleep 2; done"
+    "go-once": "echo \"App1: \" $(date)",
+    "go-repeatedly": "while true; do echo \"App1: \" $(date); sleep 2; done"
   },
   "author": "",
   "license": "ISC",
