--- a/workspaces/package2/package.json
+++ b/workspaces/package2/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "lodash": "^3.10.1"
+    "@nb/package1": "^1.0.0",
+    "lodash": "^4.17.21"
   }
 }
