--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "1.0.0",
   "description": "Exploring package managers",
   "scripts": {
-    "go-once": "echo Not implemented",
-    "go-repeatedly": "echo Not implemented"
+    "go-once": "yarn workspaces foreach run go-once",
+    "go-repeatedly": "yarn workspaces foreach --interlaced --parallel run go-repeatedly"
   },
   "repository": {
     "type": "git",
