--- a/workspaces/package1/package.json
+++ b/workspaces/package1/package.json
@@ -5,11 +5,11 @@
   "main": "index.js",
   "scripts": {
     "go-once": "echo \"App1: \" $(date)",
-    "go-repeatedly": "while true; do echo \"App1: \" $(date); sleep 2; done"
+    "go-repeatedly": "./loop.bash"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "lodash": "^4.17.21"
+    "lodash": "latest"
   }
 }
